@@ -1,5 +1,10 @@
 2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Do not compile plug-in with gcov support.
+	* src/Makefile.am: Here.
+
+2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add a dependency toward roboptim-core in dummy plug-in.
 	* src/Makefile.am: Here.
 
